tests/compile_fail/expr_unordered_type.stderr
error[E0277]: the trait bound `Product: MongoOrdered<std::string::String, std::string::String>` is not satisfied
  --> tests/compile_fail/expr_unordered_type.rs:18:18
   |
18 |     let _ = b.gt(left, right);
   |               -- ^^^^ unsatisfied trait bound
   |               |
   |               required by a bound introduced by this call
   |
help: the trait `MongoOrdered<std::string::String, std::string::String>` is not implemented for `Product`
  --> tests/compile_fail/expr_unordered_type.rs:8:1
   |
 8 | struct Product {
   | ^^^^^^^^^^^^^^
note: required by a bound in `ExprBuilder::<T>::gt`
  --> src/expr.rs
   |
   |     pub fn gt<A, B>(&self, expr1: Expr<T, A>, expr2: Expr<T, B>) -> Expr<T, bool>
   |            -- required by a bound in this associated function
   |     where
   |         T: MongoComparable<A, B> + MongoOrdered<A, B>,
   |                                    ^^^^^^^^^^^^^^^^^^ required by this bound in `ExprBuilder::<T>::gt`
